--- a/tez-ui/src/main/webapp/app/templates/error.hbs
+++ b/tez-ui/src/main/webapp/app/templates/error.hbs
@@ -17,8 +17,8 @@
 }}
 
 <ul class="breadcrumb">
-  <li>{{#link-to 'application'}}<i class="fa fa-home"> All DAGs</i>{{/link-to}} <span class="divider"></span></li>
+  <li>{{#link-to 'application'}}<i class="fa fa-home"> 所有的有向无环图</i>{{/link-to}} <span class="divider"></span></li>
   <li class="active">Error</span></li>
 </ul>
 
-<h1>An Error Occurred</h1>
+<h1>发生了错误</h1>
