--- a/tez-ui/src/main/webapp/app/templates/tasks.hbs
+++ b/tez-ui/src/main/webapp/app/templates/tasks.hbs
@@ -17,7 +17,7 @@
 }}
 
 <ul class="breadcrumb">
-  <li>{{#link-to 'application'}}<i class="fa fa-home"> All DAGs</i>{{/link-to}} <span class="divider"></span></li>
+  <li>{{#link-to 'application'}}<i class="fa fa-home"> 所有的有向无环图</i>{{/link-to}} <span class="divider"></span></li>
   <li>{{#link-to 'dag.index' parentID}}DAG [ {{parentName}} ]{{/link-to}} <span class="divider"></span></li>
   <li class="active">Tasks</li>
 </ul>
