--- a/tez-ui/src/main/webapp/app/templates/components/basic-table/pagination-view.hbs
+++ b/tez-ui/src/main/webapp/app/templates/components/basic-table/pagination-view.hbs
@@ -18,7 +18,7 @@
 
 <ul class="page-list">
   <li {{bind-attr class="view.atFirst::clickable"}} {{action 'changePage' 1}}>
-    First
+    从
   </li>
   {{#each page in view._possiblePages}}
     <li {{bind-attr class="page.isCurrent:is-current:clickable"}} {{action 'changePage' page.pageNum}}>
@@ -27,12 +27,12 @@
   {{/each}}
   {{#unless view.hideLast}}
     <li {{bind-attr class="view.atLast::clickable"}} {{action 'changePage' view.totalPages}}>
-      Last - {{view.totalPages}}
+      到 - {{view.totalPages}}
     </li>
   {{/unless}}
 </ul>
 <div class='row-select'>
-  <div>Rows</div>
+  <div>行</div>
   {{view Ember.Select
     content=rowCountOptions
     value=rowCount
