--- a/tez-ui/src/main/webapp/app/templates/components/counter-table.hbs
+++ b/tez-ui/src/main/webapp/app/templates/components/counter-table.hbs
@@ -19,11 +19,11 @@
 <table class='countertable'>
   <thead>
     <tr>
-      <th>Counter Name</th>
-      <th>Counter Value</th>
+      <th>Counter 名称</th>
+      <th>Counter 值</th>
     </tr>
     <tr>
-      <td class='filter'>{{input size='60' type='search' results='1' placeholder='Search...' valueBinding='nameFilter'}}</td>
+      <td class='filter'>{{input size='60' type='search' results='1' placeholder='搜索...' valueBinding='nameFilter'}}</td>
       <td class='filter'></td>
     </tr>
     <tbody>
