--- a/tez-ui/src/main/webapp/app/templates/vertex/index.hbs
+++ b/tez-ui/src/main/webapp/app/templates/vertex/index.hbs
@@ -187,7 +187,7 @@
 
 {{#if diagnostics}}
   <div class="margin-small-vertical">
-    {{#bs-panel heading="Diagnostics" collapsible=false dismiss=false type='danger'}}
+    {{#bs-panel heading="诊断" collapsible=false dismiss=false type='danger'}}
       {{formatDiagnostics diagnostics}}
     {{/bs-panel}}
   </div>
